Finish general css styling, missing some touches. Announcement panel needs fixing on the overflow aspect

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     grid-template: auto 4fr / 1fr 4fr;
     width: 100vw;
     height: 100vh;
-    border: 1px solid black;
 }
 
 .sidebar img {
@@ -161,7 +160,7 @@ button {
 
 .project-card {
     border: 1px solid black;
-    border-radius: 20px;
+    border-radius: 15px;
 }
 
 .project-title {
@@ -176,7 +175,7 @@ button {
     display: flex;
     justify-content: flex-end;
     gap: 1rem;
-    padding: 0 1rem 1rem 0;
+    padding: 1rem;
 }
 
 .card-options img {
@@ -186,32 +185,36 @@ button {
 .announcements {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
     grid-area: 1 / 2 / 2 / 3;
-    border: 1px solid black;
     gap: 15px;
+
+}
+
+.announcement-card {
+    border: 1px solid black;
+    border-radius: 15px;
+    width: none;
 }
 
 .announcement-card h4 {
     padding: 1rem;
+    border-radius: 15px;
 }
 
 .announcement-card p {
-    padding: 1rem;
+    padding: 0 1rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-}
-
-
-.announcement-card {
-    border: 1px solid black;
-    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .trending {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-area: 2 / 2 / 3 / 3;
-    border: 1px solid black;
     gap: 15px;
 }
 
@@ -219,6 +222,8 @@ button {
     border: 1px solid black;
     display: grid;
     grid-template: 1fr 1fr / auto 1fr;
+    gap: 0.5rem;
+    border-radius: 15px;
 }
 
 .trending-card img {
@@ -230,15 +235,10 @@ button {
     align-self: center;
 }
 
-.trending-group {
-    grid-area: 1 / 2 / 2 / 3;
-    color: red;
-    padding: rem;
-    align-self: end;
+.trending-card h5 {
+    align-self: flex-end;
 }
 
 .trending-card p {
-    grid-area: 2 / 2 / 3 / 3;
-    padding: 1rem;
     align-self: flex-start;
 }
